# yt-data

./: .gitignore  Makefile  TODO.md  foo.py  freeze-exp.md  memclear.py  mypy.ini  pyproject.toml  requirements.txt  take2.ipynb  test.ipynb  train.py
notebooks/: 5stride_eval.ipynb  data.ipynb  diffusion.ipynb  embeddings.ipynb  memory.ipynb  model.ipynb  model_export.ipynb  style_transfer.ipynb  test.ipynb
thumbs/: config_logging.py  data.py  diff_augmentation.py  diffusion.py  experiment.py  loss.py  params.py  self_attention.py  terms.py  test.py  train.py  util.py  viz.py
thumbs/experiments/: cats.py  full_conv_net.py  mnist_wgan.py  pkmn_diffusion.py  pokemon-vanilla.py  pokemon_artisinal_disc.py  pokemon_batch_norm_training_true.py  pokemon_big_both.py  pokemon_conditional.py  pokemon_conditional_outline.py  pokemon_conditional_types.py  pokemon_conditional_types_deep.py  pokemon_conditional_types_outline.py  pokemon_conditional_types_v2.py  pokemon_conditional_types_v2_deep.py  pokemon_conditional_types_v3_deep.py  pokemon_conditional_types_v4_deep.py  pokemon_deep.py  pokemon_deep_hinge.py  pokemon_deeper.py  pokemon_dense.py  pokemon_diff_augment.py  pokemon_diffusion.py  pokemon_disc_ratio.py  pokemon_dropout.py  pokemon_fat.py  pokemon_freeze_phase2.py  pokemon_freeze_phase3.py  pokemon_giga_disc.py  pokemon_l1_wgan.py  pokemon_l1_wgan_start.py  pokemon_oreily.py  pokemon_overfit.py  pokemon_pokedex v1_b.py  pokemon_pokedex.py  pokemon_pokedex_v2_g.py  pokemon_pokedex_v3_gg.py  pokemon_resnet.py  pokemon_transformer.py  pokemon_vae.py  (+15 more)
(+2 files in other folders)
